--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
+*{ 
+  position: relative;
+  background: #202020;
+  font-family: Roboto Mono;
+}
+
+header {
+  top: 10px;
+  font-style: normal;
+  text-align: center;
+  color: #FAE1C3;
+}
+
+
+@media screen and (max-width: 600px) {
+  header {
+    font-size: 20px;
+    left: -100px;
+  }
+
+  .dropbtn {
+    width: 571px;
+    height: 81px;
+    font-size: 24px;
+    left: 5px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    font-size: 25px;
+    left: -120px;
+  }
+
+  .dropbtn {
+    width: 671px;
+    height: 81px;
+    font-size: 24px;
+    left: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    font-size: 27px;
+    left: -190px;
+  }
+
+  .dropbtn {
+    width: 771px;
+    height: 81px;
+    font-size: 32px;
+    left: 150px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  header {
+    font-size: 29px;
+    left: -250px;
+  }
+
+  .dropbtn {
+    width: 871px;
+    height: 81px;
+    font-size: 32px;
+    left: 220px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  header {
+    font-size: 32px;
+    left: -375px;
+  }
+
+  .dropbtn {
+    width: 971px;
+    height: 81px;
+    font-size: 40px;
+    left: 150px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  header {
+    font-size: 32px;
+    left: -650px;
+  }
+
+  .dropbtn {
+    width: 971px;
+    height: 81px;
+    font-size: 48px;
+    left: 450px;
+  }
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background: #FAE1C3;
+  border: 4px solid #FAE1C3;
+  box-sizing: border-box;
+  border-radius: 24px;
+  
+  top: 225px;
+  color: #202020;
+  font-style: italic;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #FAE1C3;
+  min-width: 160px;
+  z-index: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
