--- a/src/App.css
+++ b/src/App.css
@@ -5,94 +5,86 @@
 }
 
 header {
-  top: 10px;
   font-style: normal;
-  text-align: center;
   color: #FAE1C3;
+ 
+}
+
+.title {
+  margin-top: 59px;
+  margin-left: 29px;
 }
 
 
 @media screen and (max-width: 600px) {
   header {
     font-size: 20px;
-    left: -100px;
   }
 
   .dropbtn {
     width: 571px;
     height: 81px;
     font-size: 24px;
-    left: 5px;
   }
 }
 
 @media screen and (min-width: 600px) {
   header {
     font-size: 25px;
-    left: -120px;
   }
 
   .dropbtn {
     width: 671px;
     height: 81px;
     font-size: 24px;
-    left: 50px;
   }
 }
 
 @media screen and (min-width: 768px) {
   header {
     font-size: 27px;
-    left: -190px;
   }
 
   .dropbtn {
     width: 771px;
     height: 81px;
     font-size: 32px;
-    left: 150px;
   }
 }
 
 @media screen and (min-width: 992px) {
   header {
     font-size: 29px;
-    left: -250px;
   }
 
   .dropbtn {
     width: 871px;
     height: 81px;
     font-size: 32px;
-    left: 220px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   header {
     font-size: 32px;
-    left: -375px;
   }
 
   .dropbtn {
     width: 971px;
     height: 81px;
     font-size: 40px;
-    left: 150px;
   }
 }
 
 @media screen and (min-width: 1300px) {
   header {
     font-size: 32px;
-    left: -650px;
   }
 
   .dropbtn {
     width: 971px;
     height: 81px;
     font-size: 48px;
-    left: 450px;
   }
 }
 
@@ -107,6 +99,7 @@ header {
   color: #202020;
   font-style: italic;
   text-align: center;
+  margin-left: 450px;
 }
 
 /* The container <div> - needed to position the dropdown content */
