--- a/src/App.css
+++ b/src/App.css
@@ -88,45 +88,82 @@ header {
   }
 }
 
-/* Dropdown Button */
-.dropbtn {
+.dropdown {
   background: #FAE1C3;
-  border: 4px solid #FAE1C3;
-  box-sizing: border-box;
-  border-radius: 24px;
-  
-  top: 225px;
-  color: #202020;
-  font-style: italic;
-  text-align: center;
+  height:81px;
+  width: 970px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 225px;
   margin-left: 450px;
 }
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
+.dropbtn {
   position: relative;
-  display: inline-block;
+  border-radius: 24px;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
+.dropdown ul {
   position: absolute;
+  background: #FAE1C3;
+  margin-top: 10px;
+  width: 970px;
+  height: 81px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+  list-style: none;
+  border-radius: 24px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-10px);
+  transition: all 0.4s ease;
+}
+
+.dropbtn li {
   background-color: #FAE1C3;
-  min-width: 160px;
-  z-index: 1;
+  color: #FAE1C3;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+.dropbtn li:hover {
+  color: #85827f;
+}
+
+.dropdown a {
+  color: #202020;
   text-decoration: none;
-  display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown button {
+  background: #FAE1C3;
+  border: none;
+  width:970px;
+  height:81px;
+  text-decoration: none;
+  font-size: 24px;
+  cursor: pointer;
+}
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.dropdown button:hover {
+  color: #85827f;
+}
+
+.dropdown button:focus + ul{
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(0);
+}
+
+
+
+
+
+
+
