dropdown menu neary finished

--- a/src/App.css
+++ b/src/App.css
@@ -88,26 +88,34 @@ header {
   }
 }
 
-.dropdown {
+.select {
   background: #FAE1C3;
   height:81px;
   width: 970px;
+  border-radius: 24px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 225px;
   margin-left: 450px;
-}
-
-.dropbtn {
   position: relative;
-  border-radius: 24px;
 }
 
-.dropdown ul {
+.select button {
+  width: 95%;
+  height: 95%;
+  background-color: #FAE1C3;
+  border: none;
+}
+
+.select button:hover {
+  color: #85827f;
+}
+
+.select ul {
   position: absolute;
   background: #FAE1C3;
-  margin-top: 10px;
+  margin-top: 175px;
   width: 970px;
   height: 81px;
   display: flex;
@@ -122,40 +130,27 @@ header {
   transition: all 0.4s ease;
 }
 
-.dropbtn li {
+.select li {
   background-color: #FAE1C3;
   color: #FAE1C3;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
 }
 
-.dropbtn li:hover {
+.select li:hover {
   color: #85827f;
 }
 
-.dropdown a {
+.select a {
   color: #202020;
   text-decoration: none;
 }
 
-.dropdown button {
-  background: #FAE1C3;
-  border: none;
-  width:970px;
-  height:81px;
-  text-decoration: none;
-  font-size: 24px;
-  cursor: pointer;
-}
 
-.dropdown button:hover {
-  color: #85827f;
-}
-
-.dropdown button:focus + ul{
+.select button:focus + ul{
   opacity: 1;
   pointer-events: all;
   transform: translateY(0);
