--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,9 @@ header {
 .select ul {
   position: absolute;
   background: #FAE1C3;
-  margin-top: 175px;
-  width: 970px;
-  height: 81px;
+  margin-top: 245px;
+  width: 930px;
+  height: 150px;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -146,7 +146,9 @@ header {
 
 .select a {
   color: #202020;
+  background-color: #FAE1C3;
   text-decoration: none;
+  font-size: 24px;
 }
 
 
