--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,24 @@
   font-family: Roboto Mono;
 }
 
+html, body {
+  max-width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+html::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+
+}
+
+.App {
+  padding-right: 25%;
+  padding-left: 25%;
+}
+
 header {
   font-style: normal;
   color: #FAE1C3;
@@ -14,6 +32,7 @@ header {
   margin-top: 59px;
   margin-left: 29px;
 }
+
 
 
 @media screen and (max-width: 600px) {
@@ -91,19 +110,16 @@ header {
 .select {
   background: #FAE1C3;
   height:81px;
-  width: 970px;
-  border-radius: 24px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 225px;
-  margin-left: 450px;
   position: relative;
 }
 
 .select button {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   background-color: #FAE1C3;
   border: none;
   color: #202020;
@@ -119,14 +135,14 @@ header {
   position: absolute;
   background: #FAE1C3;
   margin-top: 245px;
-  width: 930px;
+  width: 100%;
   height: 150px;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
   flex-direction: column;
   list-style: none;
-  border-radius: 24px;
+  padding: 0;
   opacity: 0;
   pointer-events: none;
   transform: translateY(-10px);
@@ -136,15 +152,20 @@ header {
 .select li {
   background-color: #FAE1C3;
   color: #FAE1C3;
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+  border-top: 2.5px solid black;
+
 }
 
 .select a {
   color: #202020;
+  width: 100%;
+  height: 100%;
+  margin-left: 30px;
   background-color: #FAE1C3;
   text-decoration: none;
   font-size: 24px;
